Add style file in HTML

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Language" content="pt-br" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="styles.css" rel="stylesheet" />
     <title>Calculadora</title>
   </head>
 
@@ -16,8 +17,8 @@
       </div>
       <div class="keyboard">
         <button class="two-columns contrast">AC</button>
-        <button class="contrast">÷</button>
         <button class="contrast">DEL</button>
+        <button class="contrast">÷</button>
         <button>7</button>
         <button>8</button>
         <button>9</button>
