--- a/index.html
+++ b/index.html
@@ -12,29 +12,31 @@
   <body>
     <div class="calculator">
       <div class="display">
-        <div class="previous-operand"></div>
-        <div class="current-operand">0</div>
+        <div data-previous-operand class="previous-operand"></div>
+        <div data-current-operand class="current-operand">0</div>
       </div>
       <div class="keyboard">
-        <button class="two-columns contrast">AC</button>
-        <button class="contrast">DEL</button>
-        <button class="contrast">÷</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button class="contrast">*</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button class="contrast">-</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button class="contrast">+</button>
-        <button>0</button>
-        <button class="contrast">.</button>
-        <button class="two-columns contrast">=</button>
+        <button data-all-clear class="two-columns contrast">AC</button>
+        <button data-delete class="contrast">DEL</button>
+        <button data-operation class="contrast">÷</button>
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
+        <button data-operation class="contrast">*</button>
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
+        <button data-operation class="contrast">-</button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
+        <button data-operation class="contrast">+</button>
+        <button data-number>0</button>
+        <button data-number class="contrast">.</button>
+        <button data-equals class="two-columns contrast">=</button>
       </div>
     </div>
+    <script src="calculator.js" type="text/javascript"></script>
+    <script src="script.js" type="text/javascript"></script>
   </body>
 </html>
