--- a/vanilla-js/index.html
+++ b/vanilla-js/index.html
@@ -18,25 +18,27 @@
       <div class="keyboard">
         <button data-all-clear class="two-columns contrast">AC</button>
         <button data-delete class="contrast">DEL</button>
-        <button data-operation class="contrast">÷</button>
-        <button data-number>7</button>
-        <button data-number>8</button>
-        <button data-number>9</button>
-        <button data-operation class="contrast">*</button>
-        <button data-number>4</button>
-        <button data-number>5</button>
-        <button data-number>6</button>
-        <button data-operation class="contrast">-</button>
-        <button data-number>1</button>
-        <button data-number>2</button>
-        <button data-number>3</button>
-        <button data-operation class="contrast">+</button>
-        <button data-number>0</button>
-        <button data-number class="contrast">.</button>
-        <button data-equals class="two-columns contrast">=</button>
+        <button data-input class="contrast">÷</button>
+        <button data-input>7</button>
+        <button data-input>8</button>
+        <button data-input>9</button>
+        <button data-input class="contrast">*</button>
+        <button data-input>4</button>
+        <button data-input>5</button>
+        <button data-input>6</button>
+        <button data-input class="contrast">-</button>
+        <button data-input>1</button>
+        <button data-input>2</button>
+        <button data-input>3</button>
+        <button data-input class="contrast">+</button>
+        <button data-input>0</button>
+        <button data-input class="contrast">.</button>
+        <button data-input class="two-columns contrast">=</button>
       </div>
     </div>
-    <script src="calculator.js" type="text/javascript"></script>
+    <script src="entity/calculator.js" type="text/javascript"></script>
+    <script src="entity/display.js" type="text/javascript"></script>
+    <script src="entity/operation.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
   </body>
 </html>
